--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   justify-content: baseline;
   padding: 20px 0;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .sidebar-content {
