--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 }
 
 .content {
+  padding: 6px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,4 +27,5 @@
   height: 100%;
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
