--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -8,7 +8,7 @@
 }
 
 .sidebar {
-  position: sticky;
+  position: absolute;
   top: 0;
   left: 0;
   width: 25vw;
@@ -19,6 +19,9 @@
   justify-content: baseline;
   padding: 20px 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s ease-in-out;
+  height: 100%;
+  z-index: 2;
 }
 
 .sidebar-content {
@@ -57,3 +60,32 @@
 .sidebar ul li a:hover {
   color: var(--color-4-orange);
 }
+
+.sidebar-button {
+  transform: rotate(180deg);
+  display: inline;
+  position: fixed;
+  top: 10px;
+  left: 30px;
+  background-color: var(--color-4-orange);
+  color: white;
+  padding: 10px;
+  border-radius: 20%;
+  border: none;
+  cursor: pointer;
+  z-index: 1000;
+  width: 50px;
+  transition: 0.3s ease-in-out;
+}
+
+.closed{
+  transform: translateX(-100%);
+  transition: 0.3s ease-in-out;
+}
+
+.open{
+  transform: rotate(0);
+  transition: 0.3s ease-in-out;
+  background-color: var(--color-5-green);
+}
+
