--- a/src/components/novaPonudaDialog/NovaPonudaDialog.css
+++ b/src/components/novaPonudaDialog/NovaPonudaDialog.css
@@ -13,4 +13,10 @@
     cursor: pointer;
     border: none;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .novi-upit:hover {
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.6);
+    transition: all 0.3s ease-in-out;
   }
