--- a/src/components/noviProizvodPonudaDialog/NoviProizvodPonudaDialog.css
+++ b/src/components/noviProizvodPonudaDialog/NoviProizvodPonudaDialog.css
@@ -12,4 +12,10 @@
     cursor: pointer;
     border: none;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .novi-proizvod-ponuda:hover {
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.6);
+    transition: all 0.3s ease-in-out;
   }
