--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -78,6 +78,11 @@
   transition: 0.3s ease-in-out;
 }
 
+.sidebar-button:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+  transition: 0.3s ease-in-out;
+}
+
 .closed{
   transform: translateX(-100%);
   transition: 0.3s ease-in-out;
