--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -22,6 +22,7 @@
   transition: 0.3s ease-in-out;
   height: 100%;
   z-index: 2;
+  overflow-y: scroll;
 }
 
 .sidebar-content {
@@ -94,3 +95,10 @@
   background-color: var(--color-5-green);
 }
 
+.trenutnaUlogaSelect{
+  background-color: var(--color-4-orange);
+  font-size: large;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
