--- a/src/components/novaPonudaDialog/NovaPonudaDialog.css
+++ b/src/components/novaPonudaDialog/NovaPonudaDialog.css
@@ -1,4 +1,8 @@
 .novi-upit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
     width: 50px;
     height: 50px;
     position: fixed;
