--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -13,7 +13,7 @@
   left: 0;
   width: 25vw;
   min-width: 150px;
-  background-color: var(--color-2-light-grey);
+  background-color: var(--background-color);
   display: flex;
   flex-direction: column;
   justify-content: baseline;
@@ -22,7 +22,6 @@
   transition: 0.3s ease-in-out;
   height: 100%;
   z-index: 2;
-  overflow-y: scroll;
 }
 
 .sidebar-content {
@@ -73,7 +72,7 @@
   background-color: var(--color-4-orange);
   color: white;
   padding: 10px;
-  border-radius: 20%;
+  border-radius: 5px;
   border: none;
   cursor: pointer;
   z-index: 1000;
@@ -84,7 +83,7 @@
 }
 
 .sidebar-button:hover {
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.4);
   transition: 0.3s ease-in-out;
 }
 
