Update box-shadow in NovaPonudaDialog.css

--- a/src/components/novaPonudaDialog/NovaPonudaDialog.css
+++ b/src/components/novaPonudaDialog/NovaPonudaDialog.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
     width: 50px;
     height: 50px;
     position: fixed;
@@ -21,6 +21,6 @@
   }
 
   .novi-upit:hover {
-    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.6);
     transition: all 0.3s ease-in-out;
   }
